# qsmxt.rs

./: Cargo.toml  FEATURES.md  README.md  TESTING.md  install.ps1  install.sh  run_tests.sh  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml  install.yml  release.yml
crates/qsmxt-config/: Cargo.toml
crates/qsmxt-config/src/: bridge.rs  command.rs  config.rs  enums.rs  lib.rs  masking.rs  methods.rs
src/: cli.rs  error.rs  main.rs
src/bids/: derivatives.rs  discovery.rs  entities.rs  sidecar.rs
src/commands/: bet.rs  bgremove.rs  close.rs  common.rs  dicom.rs  dilate.rs  fill_holes.rs  homogeneity.rs  init.rs  invert.rs  mask.rs  mod.rs  presets.rs  quality_map.rs  r2star.rs  resample.rs  run.rs  slurm.rs  smooth_mask.rs  swi.rs  t2star.rs  unwrap.rs  update.rs  validate.rs
src/dicom/: convert.rs  mod.rs
src/executor/: local.rs  slurm.rs
src/nifti/: convert.rs
src/pipeline/: config.rs  graph.rs  memory.rs  methods.rs  mod.rs  phase.rs  runner.rs
src/tui/: app.rs  command.rs  mod.rs  ui.rs  widgets.rs
