[package]
name = "qsmxt"
version = "0.1.0"
edition = "2021"
description = "QSMxT: Quantitative Susceptibility Mapping processing tool"

[[bin]]
name = "qsmxt"
path = "src/main.rs"

[dependencies]
qsm-core = { path = "../../QSM.rs", features = ["parallel"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rayon = "1"
glob = "0.3"
regex = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
indicatif = "0.17"
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
